# pyXBDM

./: README.md  pyproject.toml  setup.py
pyXBDM/: XBDM.py  __init__.py
pyXBDM.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test/: connection_test.py
