[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyXBDM"
version = "0.0.1"
authors = [
  { name="Xoro", email="xoro@x360labs.com" },
]
description = "This package allows you to interact with an Xbox 360 Development Kit (XDK) using XBMD.xex"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3.0",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Xoro-1337/pyXBDM"
Issues = "https://github.com/Xoro-1337/pyXBDM"
